zombie bisa makan  manusia

--- a/style.css
+++ b/style.css
@@ -32,3 +32,14 @@ body {
 .human {
   background-color: blue;
 }
+
+.eating {
+  animation: eatFlash 0.2s ease-in-out;
+  background-color: orange !important;
+}
+
+@keyframes eatFlash {
+  0% { background-color: red; }
+  50% { background-color: orange; }
+  100% { background-color: red; }
+}
