--- a/style.css
+++ b/style.css
@@ -43,3 +43,8 @@ body {
   50% { background-color: orange; }
   100% { background-color: red; }
 }
+
+.obstacle {
+  background-color: #575353;
+  box-shadow: inset 0 0 4px #000000;
+}
